[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crossing"
version = "0.2.0"
description = "Detect silent information loss at system boundaries"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Friday", email = "friday@fridayops.xyz"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["testing", "serialization", "data-loss", "boundaries", "fuzzing"]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
toml = ["tomli_w>=1.0"]
all = ["pyyaml>=6.0", "tomli_w>=1.0"]

[project.urls]
Homepage = "https://fridayops.xyz"
Repository = "https://github.com/Fridayai700/crossing"

[project.scripts]
crossing-scan = "scan:main"

[tool.setuptools]
py-modules = ["crossing", "scan"]
